--- a/DvrViewer/MainWindow.xaml
+++ b/DvrViewer/MainWindow.xaml
@@ -21,7 +21,7 @@
                 <MenuItem Name="MenuItemFileQuit" Header="Quit" Click="MenuItemFileQuit_OnClick"></MenuItem>
             </MenuItem>
             <MenuItem Name="MenuItemView" Header="View">
-
+                <MenuItem Name="MenuItemViewShowChannels" Header="Show Channels" IsCheckable="True" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=ShowChannels, Mode=TwoWay}"></MenuItem>
             </MenuItem>
         </Menu>
 
@@ -31,12 +31,24 @@
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto" x:Name="ColumnChannels"></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <ListView Grid.Column="0" Name="ListViewChannels">
-
+            <ListView Grid.Column="0" Name="ListViewChannels" Style="{StaticResource ListViewChannels}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Width="Auto" Header="Channel">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="{Binding ChannelName}"></TextBlock>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
             </ListView>
 
             <Grid Grid.Column="1">
