--- a/DvrViewer/App.xaml
+++ b/DvrViewer/App.xaml
@@ -98,5 +98,15 @@
             <Setter Property="Margin" Value="4" />
             <Setter Property="Width" Value="200"></Setter>
         </Style>
+
+        <Style TargetType="Label" x:Key="LabelView">
+            <!--<Setter Property="HorizontalAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>-->
+            <Setter Property="BorderThickness" Value="2"></Setter>
+            <Setter Property="BorderBrush" Value="White"></Setter>
+            <Setter Property="Background" Value="Red"></Setter>
+            <Setter Property="Foreground" Value="White"></Setter>
+            <Setter Property="FontSize" Value="20"></Setter>
+        </Style>
     </Application.Resources>
 </Application>
