--- a/DvrViewer/MainWindow.xaml
+++ b/DvrViewer/MainWindow.xaml
@@ -4,8 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DvrViewer"
+        xmlns:shared="clr-namespace:DvrViewer.Shared"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" Initialized="MainWindow_OnInitialized" Closed="MainWindow_OnClosed">
+        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" Initialized="MainWindow_OnInitialized" Closed="MainWindow_OnClosed" Loaded="MainWindow_OnLoaded" StateChanged="MainWindow_OnStateChanged">
+    <Window.Resources>
+
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -21,7 +25,17 @@
                 <MenuItem Name="MenuItemFileQuit" Header="Quit" Click="MenuItemFileQuit_OnClick"></MenuItem>
             </MenuItem>
             <MenuItem Name="MenuItemView" Header="View">
-                <MenuItem Name="MenuItemViewShowChannels" Header="Show Channels" IsCheckable="True" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=ShowChannels, Mode=TwoWay}"></MenuItem>
+                <MenuItem Name="MenuItemViewShowChannels" Header="Show Channels" IsCheckable="True" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=CurrentPreferences.ShowChannels, Mode=TwoWay}"></MenuItem>
+                <Separator></Separator>
+                <MenuItem Name="MenuItemViewOutputArea" Header="Output Area" Click="MenuItemViewOutputArea_OnClick" ItemsSource="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Path=ViewLayoutTypesProvider}">
+                    <MenuItem.ItemContainerStyle>
+                        <Style TargetType="MenuItem" BasedOn="{StaticResource {x:Type MenuItem}}">
+                            <Setter Property="IsCheckable" Value="True"></Setter>
+                            <Setter Property="IsChecked" Value="{Binding IsChecked}"></Setter>
+                            <Setter Property="Header" Value="{Binding Title}"></Setter>
+                        </Style>
+                    </MenuItem.ItemContainerStyle>
+                </MenuItem>
             </MenuItem>
         </Menu>
 
@@ -52,7 +66,28 @@
             </ListView>
 
             <Grid Grid.Column="1">
+                <Grid x:Name="GridViewLayout">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
 
+                    <Label Name="LabelView1" Grid.Column="0" Grid.Row="0" Content="1" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView2" Grid.Column="1" Grid.Row="0" Content="2" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView3" Grid.Column="2" Grid.Row="0" Content="3" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView4" Grid.Column="0" Grid.Row="1" Content="4" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView5" Grid.Column="1" Grid.Row="1" Content="5" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView6" Grid.Column="2" Grid.Row="1" Content="6" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView7" Grid.Column="0" Grid.Row="2" Content="7" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView8" Grid.Column="1" Grid.Row="2" Content="8" Style="{StaticResource LabelView}"></Label>
+                    <Label Name="LabelView9" Grid.Column="2" Grid.Row="2" Content="9" Style="{StaticResource LabelView}"></Label>
+                </Grid>
             </Grid>
         </Grid>
 
