- Started work on the user control which will be used for displaying the video output - Updated the interface of the main window to use the custom user control - Added some additional preferences to the application

--- a/DvrViewer/App.xaml
+++ b/DvrViewer/App.xaml
@@ -94,6 +94,9 @@
             <Setter Property="MinHeight" Value="14"></Setter>
             <Setter Property="Foreground" Value="Blue"></Setter>
         </Style>
+        <Style TargetType="WindowsFormsHost">
+            <Setter Property="Background" Value="Black"></Setter>
+        </Style>
         <Style TargetType="ListView" x:Key="ListViewChannels">
             <Setter Property="Margin" Value="4" />
             <Setter Property="Width" Value="200"></Setter>
