--- a/DvrViewer/App.xaml
+++ b/DvrViewer/App.xaml
@@ -111,5 +111,10 @@
             <Setter Property="Foreground" Value="White"></Setter>
             <Setter Property="FontSize" Value="20"></Setter>
         </Style>
+        <Style TargetType="Image" x:Key="ImageListViewIcon">
+            <Setter Property="Width" Value="20"></Setter>
+            <Setter Property="Height" Value="20"></Setter>
+            <Setter Property="Margin" Value="4"></Setter>
+        </Style>
     </Application.Resources>
 </Application>
