Added option to show/hide the toolbar Added options to the toolbar Added the ability to make the video viewing area full screen Added the ability to capture a screen shot of an active video feed

--- a/DvrViewer/App.xaml
+++ b/DvrViewer/App.xaml
@@ -116,5 +116,14 @@
             <Setter Property="Height" Value="20"></Setter>
             <Setter Property="Margin" Value="4"></Setter>
         </Style>
+        <Style TargetType="Image" x:Key="ImageToolBarIcon">
+            <Setter Property="Width" Value="20"></Setter>
+            <Setter Property="Height" Value="20"></Setter>
+            <Setter Property="Margin" Value="4"></Setter>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="TextBlockToolBarText">
+            <Setter Property="VerticalAlignment" Value="Center"></Setter>
+            <Setter Property="Margin" Value="4"></Setter>
+        </Style>
     </Application.Resources>
 </Application>
